[package]
name = "MQTT-with-ASCON"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = 1

[features]
dhat-heap = []    # if you are doing heap profiling
dhat-ad-hoc = []  # if you are doing ad hoc profiling

[dependencies]
aes-gcm = "0.10.2"
ascon-aead = "0.4.2"
chacha20poly1305 = "0.10.1"
csv = "1.3.0"
des = "0.8.1"
dhat = "0.3.2"
hc-256 = "0.5.0"
mosquitto-rs = { version = "0.4.0", features = ["vendored-mosquitto", "vendored-openssl"] }
openssl = "0.10.37"
rand = "0.8.5"
systemstat = "0.2.3"
tokio = { version = "1.28.2", features = ["full"] }
